[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = ">=1.28.57"
retry = "0.9.2"
langchain = ">=0.1.3"
streamlit = "1.27.2"
streamlit-chat = "0.1.1"
streamlit-chat-media = "0.0.4"
plotly = "5.15.0"
tqdm = "^4.66.1"
segment-analytics-python = "^2.2.3"
neo4j = "^5.16.0"
streamlit-feedback = "^0.1.3"
chainlit = "^1.0.101"
langchain-openai = "0.0.5"
langgraph = "^0.0.24"
langchain-community = "^0.0.19"
hub = "^3.0.1"
langchainhub = "^0.1.14"
langchain-experimental = "^0.0.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
