[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Andreas Kollegger <akollegger@gmail.com>", "Jennifer Reif<jennifer@thehecklers.org>", "Jason Koo <jalakoo@gmail.com>", "Alison Cossette <alisoncossette@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.1.3"
langchain-openai = "0.0.5"
langchain-community = "^0.0.19"
langchainhub = "^0.1.14"
neo4j = "^5.16.0"
retry = "0.9.2"
segment-analytics-python = "^2.2.3"
streamlit = "1.27.2"
streamlit-chat = "0.1.1"
streamlit-chat-media = "0.0.4"
streamlit-feedback = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
