[tool.poetry]
name = "rag-demo"
version = "0.1.1"
description = ""
authors = ["Andreas Kollegger <akollegger@gmail.com>", "Jennifer Reif<jennifer@thehecklers.org>", "Jason Koo <jalakoo@gmail.com>", "Alison Cossette <alisoncossette@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.5"
langchainhub = "^0.1.20"
neo4j = "^5.21.0"
retry = "^0.9.2"
segment-analytics-python = "^2.3.2"
streamlit = "^1.35.0"
streamlit-feedback = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
